# Java-Text-Game

./: .classpath  .gitignore  .gitmodules  .project  README.md
backup/: AwakenedShrub.java  Battle.java  Bullywug.java  CharMove.java  ConnectingAreas.java  EAI.java  EnemyAI.java  GameOver.java  Kobold.java  MainGame.java  MonstersInArea.java  Orc.java  Test.java  character.java
cpp/: .gitignore  CMakeLists.txt  README.MD
cpp/glew/: CMakeLists.txt
cpp/glew/lib/Debug/32BIT/: glew32sd.lib
cpp/glew/lib/Debug/64BIT/: glew32sd.lib
cpp/glew/lib/Release/32BIT/: glew32s.lib
cpp/glew/lib/Release/64BIT/: glew32s.lib
cpp/src/: gldisplay.cpp  gldisplay.h  jtg.cpp  jtg.h  logging.cpp  logging.h  main.cpp  resources.cpp  resources.h
legacy/csi/newGame/Entities/: DamageState.java
legacy/csi/newGame/Entities/Monsters/: Monster.java
legacy/csi/newGame/Entities/Weapons/: FiftyCaliberMachineGun.java  LongSword.java
legacy/csi/newGame/Mapping/: EntityBuffer.java  MapBuffer.java  MapInterface.java
legacy/csi/newGame/menus/: Label.java  Menu.java  MenuListItem.java  NotificationMenu.java
legacy/newGame/: Logger.java  MainGame.java
legacy/newGame/Animations/: SwordSwingDirection.java
legacy/newGame/Entities/treasures/: Gold.java
legacy/newGame/Mapping/: ArrayList2D.java  Tile.java
legacy/slick2d/com/magneticstudio/transience/game/: Enemy.java  HudRenderer.java  Item.java  Player.java  Tile.java  TileSetGenerator.java
legacy/slick2d/com/magneticstudio/transience/ui/: Background.java  Game.java  GameKeyboard.java  LogicalElement.java  MenuKeyboard.java  MenuKeyboardInterceptor.java  MenuMouse.java  MouseEventType.java  UIMenu.java
legacy/slick2d/com/magneticstudio/transience/util/: FloatDimension.java  FloatPoint.java  ImageGenerator.java  Shake.java  (+1 more)
resources/logos/: magnetic-studio-temp-icon-32.psd
src/: AwakenedShrub.java  Battle.java  Bullywug.java  CharMove.java  ConnectingAreas.java  EAI.java  EnemyAI.java  GameOver.java  Goblin.java  Item.java  Kobold.java  LevelUp.java  MainGame.java  Map.java  Monster.java  MonstersInArea.java  Orc.java  PickUp.java  character.java
src/com/magneticstudio/transience/devkit/: Common.kt  Complex.kt  Glyphs.kt  Mat4.kt  Quaternion.kt  Shader.kt  Texture.kt
src/com/magneticstudio/transience/game/: ComputerEntity.java  Entity.java  EntityCollection.java  Environment.java  Faction.java  HudRenderer.java  InventoryStack.java  Mission.java  Player.java  TILESET.txt  Tile.java  TileSet.java  TileSetGenerator.java  Weapon.java
src/com/magneticstudio/transience/ui/: Background.java  CharacterCell.java  Displayable.java  Game.java  GameKeyboard.java  GameResources.java  GraphicalElement.java  KeyAction.java  KeyActionType.java  KeyboardEventType.java  MenuKeyboard.java  MenuMouse.java  MenuMouseInterceptor.java  Res.java  Sprite.java  Tile.java  TileSet.java  UIButton.java  UIComponent.java  UIMenu.java  UITextField.java  UIWelcomeMenu.java
src/com/magneticstudio/transience/util/: ArrayList2D.java  Cache.java  FloatPoint.java  FlowPosition.java  Images.java  IntPoint.java  RadialVignetteGenerator.java
src/game/: CharMove.java  EnemyAI.java  Goblin.java  Item.java  LevelUp.java  MainGame.java  Map.java  Monster.java  PickUp.java  character.java
src/newGame/: IntPoint.java  MainGame.java  Map.java  MapInterface.java  MapScanner.java  MonsterList.java  Serialize.java  Tile.java
src/newGame/Animations/: Animation.java  Animations.java  SwordSwingDirection.java  TargetedCharacterAnimation.java
src/newGame/Entities/: Character.java  CharacterType.java  Entity.java  EntityAttributes.java  InventoryStack.java  Item.java  Representable.java  Shield.java  ShieldType.java
src/newGame/Entities/Inventory/: InventoryStack.java
src/newGame/Entities/Monsters/: Archer.java  Goblin.java  HobGoblin.java  Monster.java
src/newGame/Entities/Orbs/: ExpOrb.java  HealthOrb.java
src/newGame/Entities/Weapons/: FiftyCaliberMachineGun.java  Fist.java  Knife.java  LongBow.java  LongSword.java  Melee.java  Ranged.java  ShortBow.java
src/newGame/Entities/treasures/: Gold.java  Treasure.java  TreasureStack.java
src/newGame/Exceptions/: UpgradeLimitReachedException.java
src/newGame/LevelUp/: LevelUp.java
src/newGame/Mapping/: ArrayList2D.java  EntityBuffer.java  GenericArray2D.java  Map.java  MapBuffer.java  MapInterface.java  Tile.java
src/newGame/menus/: Button.java  Label.java  Menu.java  MenuComponent.java  NotificationText.java  TextField.java
src/shaders/test/: fragment.glsl  vertex.glsl
src/team_name/game_title/: PlaceHolder.java
src/test/magneticstudio/transience/gl/: CommonsTest.kt  ComplexTest.kt  Matrix4FTest.kt
src/test/magneticstudio/transience/ui/: GameTest.java  OpenGLTest.java
src/test/magneticstudio/transience/util/: ArrayList2DTest.java
src_LEGACY/newGame/: IntDimension.java
src_LEGACY/newGame/Entities/: Character.java  CharacterType.java  Item.java  Shield.java
src_LEGACY/newGame/Entities/Inventory/: InventoryStack.java
src_LEGACY/newGame/Entities/Monsters/: Sniper.java
src_LEGACY/newGame/Entities/Weapons/: Knife.java  LongBow.java  Melee.java  ShortBow.java
src_LEGACY/newGame/LevelUp/: LevelUp.java
src_LEGACY/newGame/Mapping/: Map.java
src_LEGACY/newGame/menus/: Button.java  MenuComponent.java  MenuList.java  TextField.java
